k8s/healix-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healix-service
  namespace: default
  labels:
    app: healix
spec:
  selector:
    app: healix
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  type: ClusterIP
